# clio-core-myfork

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  INSTALL.md  README.md  codecov.yml  design.md  install.sh  pyproject.toml  rebranding.md  run_stk.ps1
context-assimilation-engine/: CMakeLists.txt  README.md  chimaera_repo.yaml  clio_repo.yaml
context-assimilation-engine/benchmark/: CMakeLists.txt  clio_cae_label_bench.cc
context-assimilation-engine/config/: README.md  clio_config_example.yaml
context-assimilation-engine/core/: CMakeLists.txt  chimaera_mod.yaml  clio_mod.yaml
context-assimilation-engine/core/src/: core_client.cc  core_runtime.cc  label_client.cc
context-assimilation-engine/core/util/: clio_cae.cc  clio_cae_omni.cc
context-assimilation-engine/test/unit/: CMakeLists.txt  README.md  clio_config.yaml  test_cae_comprehensive.cc  test_cae_config_units.cc  test_cae_cte_interceptor.cc  test_cae_cte_interceptor_config.yaml  test_cae_label_client.cc  test_cae_labeling.cc  test_cae_labeling_config.yaml  test_cae_labeling_dispatch.cc  test_cae_labeling_dispatch_config.yaml  test_cae_semantic_search.cc  test_cae_semantic_search_config.yaml  test_cae_string_assim.cc  test_cae_string_assim_config.yaml  test_export_data.cc
context-exploration-engine/: CMakeLists.txt  README.md
context-exploration-engine/api/: CMakeLists.txt  README.md  clio_cee_api-config.cmake
context-exploration-engine/api/demo/: clio_conf.yaml  demo.py  docker-compose.yml
context-exploration-engine/api/src/: context_interface.cc  python_bindings.cc
context-exploration-engine/api/test/: CMakeLists.txt  clio_config.yaml  test_context_bundle.cc  test_context_comprehensive.cc  test_context_destroy.cc  test_context_interface.py  test_context_interface_enhanced.py  test_context_query.cc  test_context_query_modes.cc  test_context_retrieve_roundtrip.py
context-exploration-engine/iowarp-cei-mcp/: README.md  server.py
context-runtime/: CMakeLists.txt  README.md  clio_repo.yaml
context-runtime/benchmark/: CMakeLists.txt  clio_run_gpu_bdev_bench.cc  clio_run_thrpt_bench.cc  clio_run_thrpt_benchmark.cc  clio_xnode_bdev_bench.cc  run_gpu_bdev_bench.sh  wrp_run_thrpt_benchmark.cc  wrp_xnode_bdev_bench.cc
context-runtime/benchmark/sycl/: CMakeLists.txt  bench_common_sycl.h  workload_atomic_throughput.cc  workload_bdev_sycl.cc  workload_container_alloc.cc  workload_cte_client_overhead_sycl.cc  workload_orchestrator_lifecycle.cc  workload_sycl.h  workload_usm_bandwidth.cc  wrp_sycl_bench.cc
context-runtime/benchmarks/thallium-bench/: CMakeLists.txt  README.md  thallium_bench.cc
context-runtime/config/: chimaera_default.yaml  clio_default.yaml  example_hostfile  test_hostfile
context-runtime/include/chimaera/: chimaera_manager.h  comutex.h  config_manager.h  container.h  corwlock.h  device_memcpy.h  future.h  ipc_manager.h  local_task_archives.h  module_manager.h  pool_manager.h  pool_query.h  singletons.h  task.h  task_archives.h  types.h  work_orchestrator.h  worker.h
context-runtime/include/clio_runtime/: admin.h  api.h  batch_manager.h  boost_stack_allocator.h  chimaera_manager.h  clio_run_export.h  clio_runtime.h  comutex.h  config_manager.h  container.h  corwlock.h  device_memcpy.h  dynamic_container.h  future.h  ipc_manager.h  local_task_archives.h  manager.h  module_manager.h  pool_manager.h  pool_query.h  restart_log.h  task.h  (+5 more)
context-runtime/modules/: CMakeLists.txt  README.md  clio_repo.yaml
context-runtime/src/: CMakeLists.txt  admin.cc  batch_manager.cc  chimaera.cc  chimaera_manager.cc  clio_runtime.cc  config_manager.cc  dynamic_container.cc  ipc_manager.cc  manager.cc  module_manager.cc  pool_manager.cc  pool_query.cc  restart_log.cc  task.cc  task_archive.cc  types.cc  work_orchestrator.cc  worker.cc
context-runtime/test/: CMakeLists.txt  README.md  runtime_server.h  simple_test.h
context-runtime/util/: CMakeLists.txt  chimaera.cc  chimaera_cmd_monitor.cc  chimaera_cmd_refresh_repo.cc  clio_run.cc  clio_run_cmd_compose.cc  clio_run_cmd_config.cc  clio_run_cmd_migrate.cc  clio_run_cmd_monitor.cc  clio_run_cmd_refresh_repo.cc  clio_run_cmd_runtime_start.cc  clio_run_cmd_runtime_stop.cc  clio_run_commands.h
context-transfer-engine/: CMakeLists.txt  README.md  chimaera_repo.yaml  clio_repo.yaml
context-transfer-engine/adapter/: CMakeLists.txt  adapter_constants.h  adapter_types.h
context-transfer-engine/benchmark/: CMakeLists.txt  bench_common.h  clio_cte_bench.cc  clio_cte_keyword_index_bench.cc  clio_cte_score_bench.cc  clio_cte_semantic_bench.cc  clio_redis_bench.cc  cte_config_gpu.yaml  cte_config_ram.yaml  cte_score_bench_config.yaml  redis_bench.sh  transport_compare.sh  wrp_cte_bench.cc  wrp_cte_bench.sh  wrp_cte_score_bench.cc  wrp_redis_bench.cc
context-transfer-engine/compressor/: CMakeLists.txt  chimaera_mod.yaml  clio_mod.yaml
context-transfer-engine/core/: CMakeLists.txt  chimaera_mod.yaml  clio_mod.yaml
context-transfer-engine/filesystem/: CMakeLists.txt  clio_mod.yaml
context-transfer-engine/llm-hooks/: CMakeLists.txt
context-transfer-engine/uvm/: CMakeLists.txt
context-transfer-engine/wrapper/: CMakeLists.txt
context-transport-primitives/: CMakeLists.txt  COPYING  README.md
context-transport-primitives/benchmark/: CMakeLists.txt  README.md  allocator_benchmark.cc  cuda_stream_create_benchmark.cc  lock_latency_benchmark.cc  zmq_ipc_latency_benchmark.cc
context-transport-primitives/code_generators/: cpp_macro_generator.py
context-transport-primitives/scripts/: lint.sh  preamble.py  singleton_generator.py
context-transport-primitives/src/: CMakeLists.txt  event_manager_win.cc  gpu_linker.cc  iocp_io.cc  malloc_allocator.cc  socket_posix.cc  socket_win.cc  system_info.cc  thread_model.cc
context-transport-primitives/test/: CMakeLists.txt
context-visualizer/: CMakeLists.txt  context-visualizer
context-visualizer/context_visualizer/: __init__.py  __main__.py  app.py  chimaera_client.py  clio_client.py
installers/pip/: README.md  build_deps_manylinux.sh  pyproject.toml  repair_wheel.sh
(+1296 files in other folders)
